--- a/Master.css
+++ b/Master.css
@@ -1,5 +1,5 @@
 html {
-    background: url(images/Background.jpg) no-repeat center center fixed;
+    background: url(Images/blueSpaceBackground.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -12,12 +12,11 @@ html {
 body{
   margin: 0 0 0 0;
   padding: 0;
-
 }
 
 
 .prof-box{
-    height: 450px;
+    height: 500px;
     width: 400px;
     background: rgba(0,0,0,0.4);
     padding: 40px;
@@ -25,8 +24,87 @@ body{
     margin: 0 auto;
     margin-top: 100px;
     text-align: center;
+    
+}
+
+
+a span:nth-child(1){
+  position: absolute;
+  top: 100px;
+  left: 0px;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(to right, #0c002b, #1779ff);
+  animation: animation1 2s linear infinite;
 
 }
+
+@keyframes animation1{
+  0%{
+    transform: translateX(-100%);
+  }
+  100%{
+    transform: translateX(100%);
+  }
+}
+
+a span:nth-child(2){
+  position: absolute;
+  top: 0px;
+  right: 140px;
+  width: 1px;
+  height: 400px;
+  background: linear-gradient(to bottom, #0c002b, #1779ff);
+  animation: animation2 15s linear infinite;
+}
+
+@keyframes animation2{
+  0%{
+    transform: translateY(-100%);
+  }
+  100%{
+    transform: translateY(100%);
+  }
+}
+
+a span:nth-child(3){
+  position: absolute;
+  top: 600px;
+  left: 500px;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(to left, #0c002b, #1779ff);
+  animation: animation3 9s linear infinite;
+}
+
+@keyframes animation3{
+  0%{
+    transform: translateX(100%);
+  }
+  100%{
+    transform: translateX(-100%);
+  }
+}
+
+a span:nth-child(4){
+  position: absolute;
+  top: 500px;
+  left: 30px;
+  width: 1px;
+  height: 500px;
+  background: linear-gradient(to top, #0c002b, #1779ff);
+  animation: animation4 4.5s linear infinite;
+}
+
+@keyframes animation4{
+  0%{
+    transform: translateY(100%);
+  }
+  100%{
+    transform: translateY(-100%);
+  }
+}
+
 
 .prof-pic{
     height: 200px;
@@ -205,3 +283,119 @@ p{
   transition: filter 0.5se ease;
   filter: grayscale(100%);
 }
+
+.content{
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
+  padding: 20px;
+  color: white;
+}
+
+.ProjectDisplay .h1{
+  margin: 0;
+  padding: 20px 0px;
+  font-size: 3em;
+}
+
+.BoxOne{
+  width: 100%;
+  margin: auto; 
+  background: #043b83;
+  position: relative;
+  height: 400px;
+  padding: 180px 0px;
+  
+}
+
+.BoxOne::after{
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  transform-origin: top right;
+  transform: skewY(-11deg);
+}
+
+.BoxOne .content p{
+  width: 50%;
+  margin-top: 20px;
+  font-size: 1em;
+  line-height: 25px;
+  letter-spacing: 1px;
+}
+
+.BoxTwo{
+  width: 100%;
+  position: relative;
+  z-index: -2;
+  padding: 250px 0px 100px;
+  background: #1f313f;
+  color: #fff;
+}
+
+.BoxTwo .content{
+  text-align: right;
+}
+
+.BoxTwo .content p{
+  width: 50%;
+  margin-left: auto;
+  margin-right: 20px;
+  font-size: 1em;
+  line-height: 25px;
+  letter-spacing: 1px;
+}
+
+.ComputerImage img{
+  position: absolute;
+  right: 10%;
+  top: 2050px;
+  
+}
+
+.PhoneImage img{
+  position: absolute;
+  left: 10%;
+  top: 2315px;
+}
+
+.WebsiteImage img{
+  position: absolute;
+  right: 10.7%;
+  top: 2065px;
+}
+
+.PhoneImageExcel {
+  position: absolute;
+  left: 160px;
+  top: 2332px;
+}
+
+/* footer 
+.footer {
+  background: #303036;
+  color: #d3d3d3;
+  height: 100px;
+}
+
+.footer-content{
+  border: 1px solid #1779ff;
+  height: 100;
+}
+
+.footer-bottom{    
+  background: rgb(7, 13, 29);
+  color: #686868;
+  height: 30px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+}
+*/
